[tool.poetry]
name = "vyro"
version = "0.1.0"
description = ""
authors = ["tserg <8017125+tserg@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
vyper = "^0.3.7"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"
setuptools = "^65.4.1"
ape-vyper = "^0.5.0"
ape-starknet = "^0.5.0-alpha.1"
ape-cairo = "^0.5.0-alpha.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'