[tool.poetry]
name = "vyro"
version = "0.1.0"
description = "Vyper to Cairo transpiler for the Ethereum and StarkNet ecosystems"
authors = ["tserg <8017125+tserg@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["ethereum", "starknet", "vyper", "cairo", "transpiler"]

[tool.poetry.scripts]
vyro = "vyro._cli.__main__:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
vyper = "0.3.7"
cairo-lang = "0.10.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"
setuptools = "^65.4.1"
eth-ape = "^0.6.2"
ape-vyper = "^0.6.1"
ape-starknet = "^0.6.0"
ape-cairo = "^0.6.0"
web3 = {version = "6.0.0b7", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
